src/components/sightingcard/style.scss
@keyframes fadein {
    from {
        opacity: 0%;
    }
    to {
        opacity: 100%;
    }   
}

.sightingresults {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    background: rgba(27,29,33,0.75);
    border-radius: 5px 5px 15px 15px;
    padding: 5px 15px 5px 15px;

    
    // width: 377px; -- moved to the sigting cards
    //changing width to pixels to try to help with details div expansion -- previously: width: 135%;    
    font-family: "Basier";
    opacity: 0%;
    animation-name: fadein;
    animation-duration: .6s;
    animation-fill-mode: forwards;
    animation-timing-function: linear;
    
    //NOTE: to add the scrolling effect for sighting oportunities do the following
    //FIRST, take off display: flex - not sure why but this was pushing content above viewing section
    // YOU NEED to keep flex-direction though... somehow it still works without display flex...
    //NEXT add an extra div and the following around just the sighting cards NOT header so we won't affect it
    // potential issue - creates a problem with the folding out of cards... answer may just be to limit sighting data to # of cards
    // max-height: 400px;
    // overflow-y: auto;

    .sightingheader {
        color: #C6C6C5;
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        padding: 1px 0px 1px 0px;
        border-bottom: 1px solid #393939;
        // width: 123%;
    }

    .sightingcard {
        color: #bdbdbd;
        display: flex;
        flex-direction: column;
        // justify-content: space-between;
        padding: 17px 0px 17px 0px;
        border-bottom: 1px solid #393939;
        font-size: .85em;
        width: 362px;
        //NOTE: width formerly 377 - 2 extra, subrtacted 30 to account for the padding on .sightingresults above - 15 and 15
        // width: 100%;

        &:hover {
            // transform: scale(1.000005, 1);
            color: #ebebeb;
            // -webkit-transform: scale(1.1, 1.1);
            // box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
            // -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
            // transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
            // box-shadow: 0 6px 6px 0 grey;

        }

        .card_overview {
            display: flex;
            justify-content: space-between;
            font-weight: bold;
        }

        .card_detail {
            display: flex;
            justify-content: space-evenly;
            flex-direction: row;
            margin-top: 4%;
            font-size: .88em;
            
            .detail_info {
                display: flex;
                flex-direction: column;
                justify-content: center;
                width: 240px;
                
                .detail_info_title {
                    text-decoration: underline;
                    margin-bottom: 5px;
                }
                .detail_info_data {
                    margin-bottom: 15px;
                }
            }

            .detail_compass {
                
            }
            // span {
            //     svg {
            //         width: 145px;
            //         padding: 0px 25px 0px 25px;
            //         border-radius: 29%;
            //     }
            // }
        }


        #headerspacingspan {
            width: 10%;
        }

    }

    :last-child {
        border-bottom: none;
    }

    :first-child:hover {
        transform: scale(1, 1);
    }

}

